Fixed cards being too long

--- a/styling/sections/projects.css
+++ b/styling/sections/projects.css
@@ -21,7 +21,8 @@
 }
 
 .card {
-   width: 50%;
+   width: auto;
+   max-width: 800px;
    color: #6D83F2;
    text-align: center;
    display: flex;
@@ -50,6 +51,12 @@
 .project-buttons {
    display: flex;
    flex-direction: row !important;
+}
+
+@media only screen and (max-width: 1000px) {
+   .card {
+      width: 600px;
+   }
 }
 
 @media only screen and (max-width: 750px) {
